--- a/readme-gen-frontend/src/App.scss
+++ b/readme-gen-frontend/src/App.scss
@@ -252,7 +252,7 @@ hr {
     border-radius: 10px;
     box-shadow: 0 5px 20px rgba($color: $text-color, $alpha: 0.3);
     width: 100%;
-    max-width: 700px; /* Adjust as needed */
+    max-width: 85vw;
     max-height: 85vh;
     display: flex;
     flex-direction: column;
@@ -314,4 +314,73 @@ hr {
         opacity: 1;
         transform: scale(1);
     }
+}
+
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: $text-color, $alpha: 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loading-spinner {
+    border: 4px solid rgba($color: $text-color, $alpha: 0.1);
+    border-top: 4px solid $blue-color;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
+
+.loading-text {
+    color: $background-color;
+    margin-top: 10px;
+    font-size: 1.2em;
+}
+
+.form-conatiner.loading {
+    opacity: 0.7;
+    pointer-events: none;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+    border-top: 1px solid $background-color;
+}
+
+.modal-download-btn {
+    background-color: $success-color;
+    color: $background-color;
+    border: none;
+    padding: 8px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+    margin-left: 10px;
+}
+
+.modal-download-btn:hover {
+    background-color: #367c39;
 }
